public class Appli {
    public static void main(String[] args) {
        Jeu awale = new Jeu();
        awale.deroulePartie();
    }
}






